--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -188,7 +188,7 @@ input_text_not_found = red
 item_away = yellow
 nicklist_away = cyan
 nicklist_group = green
-separator = 7
+separator = 8
 status_count_highlight = magenta
 status_count_msg = brown
 status_count_other = default
@@ -246,6 +246,7 @@ save_config_on_unload = on
 
 [bar]
 buffers.color_bg = default
+buffers.color_bg_inactive = default
 buffers.color_delim = default
 buffers.color_fg = default
 buffers.conditions = ""
@@ -260,6 +261,7 @@ buffers.size = 0
 buffers.size_max = 0
 buffers.type = root
 buflist.color_bg = default
+buflist.color_bg_inactive = default
 buflist.color_delim = default
 buflist.color_fg = default
 buflist.conditions = ""
@@ -274,6 +276,7 @@ buflist.size = 0
 buflist.size_max = 30
 buflist.type = root
 fset.color_bg = default
+fset.color_bg_inactive = default
 fset.color_delim = cyan
 fset.color_fg = default
 fset.conditions = "${buffer.full_name} == fset.fset"
@@ -288,6 +291,7 @@ fset.size = 3
 fset.size_max = 3
 fset.type = window
 input.color_bg = default
+input.color_bg_inactive = default
 input.color_delim = cyan
 input.color_fg = default
 input.conditions = ""
@@ -302,6 +306,7 @@ input.size = 1
 input.size_max = 0
 input.type = window
 isetbar.color_bg = default
+isetbar.color_bg_inactive = default
 isetbar.color_delim = cyan
 isetbar.color_fg = default
 isetbar.conditions = ""
@@ -316,6 +321,7 @@ isetbar.size = 3
 isetbar.size_max = 3
 isetbar.type = window
 nicklist.color_bg = default
+nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
 nicklist.color_fg = default
 nicklist.conditions = "${nicklist}"
@@ -330,6 +336,7 @@ nicklist.size = 16
 nicklist.size_max = 15
 nicklist.type = window
 status.color_bg = 10
+status.color_bg_inactive = default
 status.color_delim = cyan
 status.color_fg = 7
 status.conditions = ""
@@ -343,17 +350,18 @@ status.separator = on
 status.size = 1
 status.size_max = 0
 status.type = window
-title.color_bg = 10
+title.color_bg = default
+title.color_bg_inactive = default
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
 title.filling_left_right = vertical
 title.filling_top_bottom = horizontal
-title.hidden = on
+title.hidden = off
 title.items = "buffer_title"
 title.position = top
 title.priority = 500
-title.separator = off
+title.separator = on
 title.size = 1
 title.size_max = 0
 title.type = window
@@ -425,6 +433,7 @@ meta-9 = "/buffer *9"
 meta-< = "/input jump_previously_visited_buffer"
 meta-= = "/filter toggle"
 meta-> = "/input jump_next_visited_buffer"
+meta-B = "/buflist toggle"
 meta-OA = "/input history_global_previous"
 meta-OB = "/input history_global_next"
 meta-OC = "/input move_next_word"
