Use virtual text to render error messages inline

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -4,7 +4,7 @@
   "diagnostic.errorSign": "✕",
   "diagnostic.infoSign": "✕",
   "diagnostic.hintSign": "✕",
-  "solargraph.env": {
-    "RBENV_VERSION": "2.6.0"
-  }
+  "diagnostic.virtualText": true,
+  "diagnostic.virtualTextCurrentLineOnly": false,
+  "diagnostic.virtualTextPrefix": "✕ "
 }
