--- a/config/bat/config
+++ b/config/bat/config
@@ -1,3 +1,4 @@
-# works with both dark and light terminal themes from https://github.com/chriskempson/base16
---theme=base16
---italic-text=always
+--theme="base16"
+--style="header,numbers,changes,grid"
+--italic-text="always"
+--color="always"
