Small vscode settings changes

--- a/VSCode/settings.json
+++ b/VSCode/settings.json
@@ -6,7 +6,6 @@
     "gitlens.blame.heatmap.enabled": false,
     "gitlens.blame.separateLines": false,
     "gitlens.codeLens.enabled": false,
-    "gitlens.codeLens.authors.enabled": false,
     "gitlens.defaultGravatarsStyle": "retro",
     "editor.cursorSurroundingLines": 8,
     "editor.rulers": [],
@@ -52,7 +51,7 @@
     "gruvboxMaterial.darkWorkbench": "flat",
     "editor.fontFamily": "Hack, Menlo, Monaco, 'Courier New', monospace",
     "git.suggestSmartCommit": false,
-    "editor.fontLigatures": true,
+    "editor.fontLigatures": false,
     "editor.highlightActiveIndentGuide": false,
     "vim.showcmd": false,
     "workbench.startupEditor": "none",
@@ -67,4 +66,9 @@
     "editor.glyphMargin": false,
     "debug.javascript.autoAttachFilter": "onlyWithFlag",
     "workbench.enableExperiments": false,
+    "gitlens.liveshare.allowGuestAccess": false,
+    "material-icon-theme.saturation": 1,
+    "scm.alwaysShowRepositories": true,
+    "scm.autoReveal": false,
+    "material-icon-theme.opacity": 0.6,
 }
