--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -20,5 +20,32 @@
   "suggest.disableMenu": true,
   "suggest.detailField": "preview",
   "suggest.noselect": false,
-  "suggest.removeDuplicateItems": true
+  "suggest.removeDuplicateItems": true,
+  "suggest.completionItemKindLabels": {
+    "module": "\ufa72",
+    "method": "\uf794",
+    "function": "\uf794",
+    "variable": "\uf155",
+    "constant": "\uf8ff",
+    "struct": "\uf036",
+    "class": "\uf719",
+    "interface": "\ufb85",
+    "text": "\uf783",
+    "enum": "\uf435",
+    "enumMember": "\uf02b",
+    "color": "\ue22b",
+    "property": "\ufab6",
+    "field": "\uf93d",
+    "unit": "\uf475",
+    "file": "\uf471",
+    "value": "\uf82e",
+    "event": "\ufacd",
+    "folder": "\uf115",
+    "keyword": "\uf80a",
+    "snippet": "\uf64d",
+    "operator": "\uf915",
+    "reference": "\uf87a",
+    "typeParameter": "\uf278",
+    "default": "\uf29c"
+  }
 }
