--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -13,7 +13,7 @@ window:
   # Values for `decorations` (macOS only):
   #     - transparent: Title bar, transparent background and title bar buttons
   #     - buttonless: Title bar, transparent background and no title bar buttons
-  decorations: none
+  decorations: full
 
   # Allow terminal applications to change Alacritty's window title.
   dynamic_title: true
