Update alacritty + vim colors

--- a/config/nvim/coc-settings.json
+++ b/config/nvim/coc-settings.json
@@ -11,6 +11,7 @@
   "diagnostic.virtualTextCurrentLineOnly": false,
   "diagnostic.virtualTextPrefix": "✕ ",
   "coc.preferences.floatActions": true,
+  "coc.preferences.messageLevel": "warning",
   "coc.preferences.formatOnSaveFiletypes": [
     "go",
     "javascript",
