--- a/config/alacritty.yml
+++ b/config/alacritty.yml
@@ -45,26 +45,26 @@ draw_bold_text_with_bright_colors: false
 
 colors:
   primary:
-    background: '#2b3339'
-    foreground: '#d3c6aa'
+    background: '0x1d2021'
+    foreground: '0xd4be98'
   normal:
-    black:   '#4b565c'
-    red:     '#e67e80'
-    green:   '#a7c080'
-    yellow:  '#dbbc7f'
-    blue:    '#7fbbb3'
-    magenta: '#d699b6'
-    cyan:    '#83c092'
-    white:   '#d3c6aa'
+    black:   '0x32302f'
+    red:     '0xea6962'
+    green:   '0xa9b665'
+    yellow:  '0xd8a657'
+    blue:    '0x7daea3'
+    magenta: '0xd3869b'
+    cyan:    '0x89b482'
+    white:   '0xd4be98'
   bright:
-    black:   '#4b565c'
-    red:     '#e67e80'
-    green:   '#a7c080'
-    yellow:  '#dbbc7f'
-    blue:    '#7fbbb3'
-    magenta: '#d699b6'
-    cyan:    '#83c092'
-    white:   '#d3c6aa'
+    black:   '#504945'
+    red:     '0xea6962'
+    green:   '0xa9b665'
+    yellow:  '0xd8a657'
+    blue:    '0x7daea3'
+    magenta: '0xd3869b'
+    cyan:    '0x89b482'
+    white:   '0xd4be98'
 
   cursor:
    text: CellBackground
@@ -73,6 +73,11 @@ colors:
   selection:
    text: CellBackground
    background: CellForeground
+  hints:
+    start:
+      foreground: '#f0ff0f'
+    end:
+     foreground: '#f0ff0f'
 
 selection:
   # This string contains all characters that are used as separators for
