Update neovim LSP, colors, autocomplete, etc.

--- a/tmux.conf
+++ b/tmux.conf
@@ -77,3 +77,6 @@ set -g window-status-separator ""
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
+
+# allow escape sequence passthrough
+set -g allow-passthrough on
