--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -4,9 +4,9 @@
 # WARNING: It is NOT recommended to edit this file by hand,
 # especially if WeeChat is running.
 #
-# Use /set or similar command to change settings in WeeChat.
+# Use commands like /set or /fset to change settings in WeeChat.
 #
-# For more info, see: https://weechat.org/doc/quickstart
+# For more info, see: https://weechat.org/doc/quickstart/
 #
 
 [debug]
@@ -33,7 +33,7 @@ buffer_position = end
 buffer_search_case_sensitive = off
 buffer_search_force_default = off
 buffer_search_regex = off
-buffer_search_where = message
+buffer_search_where = prefix_message
 buffer_time_format = ""
 buffer_time_same = ""
 color_basic_force_bold = off
@@ -58,12 +58,12 @@ emphasized_attributes = ""
 highlight = ""
 highlight_regex = ""
 highlight_tags = ""
-hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0"
+hotlist_add_conditions = "${away} || ${buffer.num_displayed} == 0 || ${info:relay_client_count,weechat,connected} > 0"
 hotlist_buffer_separator = ", "
 hotlist_count_max = 2
 hotlist_count_min_msg = 2
 hotlist_names_count = 3
-hotlist_names_length = 15
+hotlist_names_length = 0
 hotlist_names_level = 12
 hotlist_names_merged_buffers = off
 hotlist_prefix = "H: "
@@ -72,6 +72,7 @@ hotlist_short_names = on
 hotlist_sort = group_time_asc
 hotlist_suffix = ""
 hotlist_unique_numbers = on
+hotlist_update_on_buffer_switch = on
 input_cursor_scroll = 20
 input_share = none
 input_share_overwrite = off
@@ -80,7 +81,7 @@ item_away_message = on
 item_buffer_filter = "*"
 item_buffer_zoom = "!"
 item_mouse_status = "M"
-item_time_format = "x"
+item_time_format = "%H:%M"
 jump_current_to_previous_buffer = on
 jump_previous_buffer_when_closing = on
 jump_smart_back_to_buffer = on
@@ -90,17 +91,18 @@ mouse = on
 mouse_timer_delay = 100
 nick_color_force = ""
 nick_color_hash = djb2
+nick_color_hash_salt = ""
 nick_color_stop_chars = "_|["
 nick_prefix = " "
-nick_suffix = " "
+nick_suffix = ""
 paste_auto_add_newline = on
 paste_bracketed = on
 paste_bracketed_timer_delay = 10
 paste_max_lines = 1
 prefix_action = " *"
 prefix_align = right
-prefix_align_max = 15
-prefix_align_min = 0
+prefix_align_max = 0
+prefix_align_min = 13
 prefix_align_more = "+"
 prefix_align_more_after = on
 prefix_buffer_align = right
@@ -113,13 +115,14 @@ prefix_network = "--"
 prefix_quit = "←"
 prefix_same_nick = " "
 prefix_same_nick_middle = ""
-prefix_suffix = ""
+prefix_suffix = "│"
 quote_nick_prefix = "<"
 quote_nick_suffix = ">"
 quote_time_format = "%H:%M:%S"
 read_marker = line
 read_marker_always_show = off
-read_marker_string = "-"
+read_marker_string = "—"
+read_marker_update_on_buffer_switch = on
 save_config_on_exit = on
 save_config_with_fsync = off
 save_layout_on_exit = none
@@ -148,37 +151,37 @@ chat_buffer = white
 chat_channel = white
 chat_day_change = cyan
 chat_delimiters = green
-chat_highlight = 0
-chat_highlight_bg = 1
+chat_highlight = yellow
+chat_highlight_bg = magenta
 chat_host = cyan
 chat_inactive_buffer = default
 chat_inactive_window = default
-chat_nick = 8
-chat_nick_colors = "1,2,3,4,5,6"
+chat_nick = lightcyan
+chat_nick_colors = "1,2,3,4,5,6,9,10,11,12,13,14"
 chat_nick_offline = default
 chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = cyan
-chat_nick_prefix = green
-chat_nick_self = 8
+chat_nick_prefix = 8
+chat_nick_self = white
 chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
 chat_prefix_buffer_inactive_buffer = default
 chat_prefix_error = yellow
-chat_prefix_join = 2
+chat_prefix_join = lightgreen
 chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
-chat_prefix_quit = 1
-chat_prefix_suffix = green
+chat_prefix_quit = lightred
+chat_prefix_suffix = 8
 chat_read_marker = 3
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
 chat_text_found = yellow
 chat_text_found_bg = lightmagenta
-chat_time = 8
-chat_time_delimiters = 8
+chat_time = 15
+chat_time_delimiters = 15
 chat_value = cyan
 chat_value_null = blue
 emphasized = yellow
@@ -200,8 +203,8 @@ status_data_private = lightgreen
 status_filter = green
 status_more = yellow
 status_mouse = green
-status_name = 7
-status_name_ssl = 7
+status_name = white
+status_name_ssl = lightgreen
 status_nicklist_count = default
 status_number = yellow
 status_time = default
@@ -233,33 +236,25 @@ max_visited_buffers = 50
 
 [network]
 connection_timeout = 60
-gnutls_ca_file = "/etc/ssl/certs/ca-certificates.crt"
+gnutls_ca_system = on
+gnutls_ca_user = ""
 gnutls_handshake_timeout = 30
 proxy_curl = ""
 
 [plugin]
 autoload = "*"
-debug = off
 extension = ".so,.dll"
-path = "%h/plugins"
+path = "${weechat_data_dir}/plugins"
 save_config_on_unload = on
 
+[signal]
+sighup = "${if:${info:weechat_headless}?/reload:/quit -yes}"
+sigquit = "/quit -yes"
+sigterm = "/quit -yes"
+sigusr1 = ""
+sigusr2 = ""
+
 [bar]
-buffers.color_bg = default
-buffers.color_bg_inactive = default
-buffers.color_delim = default
-buffers.color_fg = default
-buffers.conditions = ""
-buffers.filling_left_right = vertical
-buffers.filling_top_bottom = columns_vertical
-buffers.hidden = on
-buffers.items = "buffers"
-buffers.position = left
-buffers.priority = 0
-buffers.separator = on
-buffers.size = 0
-buffers.size_max = 0
-buffers.type = root
 buflist.color_bg = default
 buflist.color_bg_inactive = default
 buflist.color_delim = default
@@ -277,7 +272,7 @@ buflist.size_max = 30
 buflist.type = root
 fset.color_bg = default
 fset.color_bg_inactive = default
-fset.color_delim = cyan
+fset.color_delim = 8
 fset.color_fg = default
 fset.conditions = "${buffer.full_name} == fset.fset"
 fset.filling_left_right = vertical
@@ -292,34 +287,19 @@ fset.size_max = 3
 fset.type = window
 input.color_bg = default
 input.color_bg_inactive = default
-input.color_delim = cyan
+input.color_delim = 8
 input.color_fg = default
 input.conditions = ""
 input.filling_left_right = vertical
 input.filling_top_bottom = horizontal
 input.hidden = off
-input.items = ">> input_text"
+input.items = ">,[input_search],[input_paste],input_text"
 input.position = bottom
 input.priority = 1000
 input.separator = on
-input.size = 1
+input.size = 0
 input.size_max = 0
 input.type = window
-isetbar.color_bg = default
-isetbar.color_bg_inactive = default
-isetbar.color_delim = cyan
-isetbar.color_fg = default
-isetbar.conditions = ""
-isetbar.filling_left_right = vertical
-isetbar.filling_top_bottom = horizontal
-isetbar.hidden = on
-isetbar.items = "isetbar_help"
-isetbar.position = top
-isetbar.priority = 0
-isetbar.separator = on
-isetbar.size = 3
-isetbar.size_max = 3
-isetbar.type = window
 nicklist.color_bg = default
 nicklist.color_bg_inactive = default
 nicklist.color_delim = cyan
@@ -332,18 +312,18 @@ nicklist.items = "buffer_nicklist"
 nicklist.position = right
 nicklist.priority = 200
 nicklist.separator = on
-nicklist.size = 16
-nicklist.size_max = 15
+nicklist.size = 18
+nicklist.size_max = 36
 nicklist.type = window
-status.color_bg = 10
-status.color_bg_inactive = default
+status.color_bg = blue
+status.color_bg_inactive = darkgray
 status.color_delim = cyan
-status.color_fg = 7
+status.color_fg = default
 status.conditions = ""
 status.filling_left_right = vertical
 status.filling_top_bottom = horizontal
 status.hidden = on
-status.items = "[time] +buffer_name+(buffer_modes),aspell_suggest,scroll"
+status.items = "[time],[buffer_last_number],[buffer_plugin],buffer_number+:+buffer_name+(buffer_modes)+{buffer_nicklist_count}+buffer_zoom+buffer_filter,scroll,[lag],[hotlist],[typing],completion"
 status.position = bottom
 status.priority = 500
 status.separator = on
@@ -351,7 +331,7 @@ status.size = 1
 status.size_max = 0
 status.type = window
 title.color_bg = default
-title.color_bg_inactive = default
+title.color_bg_inactive = darkgray
 title.color_delim = cyan
 title.color_fg = default
 title.conditions = ""
@@ -363,7 +343,7 @@ title.position = top
 title.priority = 500
 title.separator = on
 title.size = 1
-title.size_max = 0
+title.size_max = 1
 title.type = window
 
 [layout]
@@ -396,13 +376,14 @@ ctrl-L = "/window refresh"
 ctrl-M = "/input return"
 ctrl-N = "/buffer +1"
 ctrl-P = "/buffer -1"
-ctrl-R = "/input search_text"
+ctrl-R = "/input search_text_here"
 ctrl-Sctrl-U = "/input set_unread"
 ctrl-T = "/input transpose_chars"
 ctrl-U = "/input delete_beginning_of_line"
 ctrl-W = "/input delete_previous_word"
 ctrl-X = "/input switch_active_buffer"
 ctrl-Y = "/input clipboard_paste"
+meta-ctrl-M = "/input insert \n"
 meta-meta-OP = "/bar scroll buflist * b"
 meta-meta-OQ = "/bar scroll buflist * e"
 meta-meta2-11~ = "/bar scroll buflist * b"
@@ -419,6 +400,7 @@ meta-meta2-A = "/buffer -1"
 meta-meta2-B = "/buffer +1"
 meta-meta2-C = "/buffer +1"
 meta-meta2-D = "/buffer -1"
+meta-- = "/filter toggle @"
 meta-/ = "/input jump_last_buffer_displayed"
 meta-0 = "/buffer *10"
 meta-1 = "/buffer *1"
@@ -434,6 +416,7 @@ meta-< = "/input jump_previously_visited_buffer"
 meta-= = "/filter toggle"
 meta-> = "/input jump_next_visited_buffer"
 meta-B = "/buflist toggle"
+meta-N = "/bar toggle nicklist"
 meta-OA = "/input history_global_previous"
 meta-OB = "/input history_global_next"
 meta-OC = "/input move_next_word"
@@ -474,8 +457,12 @@ meta2-201~ = "/input paste_stop"
 meta2-20~ = "/bar scroll title * -30%"
 meta2-21~ = "/bar scroll title * +30%"
 meta2-23;3~ = "/bar scroll nicklist * b"
+meta2-23;5~ = "/bar scroll nicklist * -100%"
+meta2-23^ = "/bar scroll nicklist * -100%"
 meta2-23~ = "/bar scroll nicklist * -100%"
 meta2-24;3~ = "/bar scroll nicklist * e"
+meta2-24;5~ = "/bar scroll nicklist * +100%"
+meta2-24^ = "/bar scroll nicklist * +100%"
 meta2-24~ = "/bar scroll nicklist * +100%"
 meta2-3~ = "/input delete_next_char"
 meta2-4~ = "/input move_end_of_line"
@@ -497,118 +484,123 @@ meta2-Z = "/input complete_previous"
 meta2-[E = "/buffer -1"
 meta-_ = "/input redo"
 meta-a = "/input jump_smart"
-meta-b = "/window bare"
+meta-b = "/input move_previous_word"
 meta-d = "/input delete_next_word"
 meta-f = "/input move_next_word"
-meta-h = "/input hotlist_clear"
-meta-j = "/buffer +1"
-meta-jmeta-l = "/input jump_last_buffer"
+meta-hmeta-R = "/input hotlist_restore_all"
+meta-hmeta-c = "/input hotlist_clear"
+meta-hmeta-m = "/input hotlist_remove_buffer"
+meta-hmeta-r = "/input hotlist_restore_buffer"
+meta-jmeta-f = "/buffer -"
+meta-jmeta-l = "/buffer +"
 meta-jmeta-r = "/server raw"
 meta-jmeta-s = "/server jump"
-meta-k = "/buffer -1"
-meta-l01 = "/buffer 1"
-meta-l02 = "/buffer 2"
-meta-l03 = "/buffer 3"
-meta-l04 = "/buffer 4"
-meta-l05 = "/buffer 5"
-meta-l06 = "/buffer 6"
-meta-l07 = "/buffer 7"
-meta-l08 = "/buffer 8"
-meta-l09 = "/buffer 9"
-meta-l10 = "/buffer 10"
-meta-l11 = "/buffer 11"
-meta-l12 = "/buffer 12"
-meta-l13 = "/buffer 13"
-meta-l14 = "/buffer 14"
-meta-l15 = "/buffer 15"
-meta-l16 = "/buffer 16"
-meta-l17 = "/buffer 17"
-meta-l18 = "/buffer 18"
-meta-l19 = "/buffer 19"
-meta-l20 = "/buffer 20"
-meta-l21 = "/buffer 21"
-meta-l22 = "/buffer 22"
-meta-l23 = "/buffer 23"
-meta-l24 = "/buffer 24"
-meta-l25 = "/buffer 25"
-meta-l26 = "/buffer 26"
-meta-l27 = "/buffer 27"
-meta-l28 = "/buffer 28"
-meta-l29 = "/buffer 29"
-meta-l30 = "/buffer 30"
-meta-l31 = "/buffer 31"
-meta-l32 = "/buffer 32"
-meta-l33 = "/buffer 33"
-meta-l34 = "/buffer 34"
-meta-l35 = "/buffer 35"
-meta-l36 = "/buffer 36"
-meta-l37 = "/buffer 37"
-meta-l38 = "/buffer 38"
-meta-l39 = "/buffer 39"
-meta-l40 = "/buffer 40"
-meta-l41 = "/buffer 41"
-meta-l42 = "/buffer 42"
-meta-l43 = "/buffer 43"
-meta-l44 = "/buffer 44"
-meta-l45 = "/buffer 45"
-meta-l46 = "/buffer 46"
-meta-l47 = "/buffer 47"
-meta-l48 = "/buffer 48"
-meta-l49 = "/buffer 49"
-meta-l50 = "/buffer 50"
-meta-l51 = "/buffer 51"
-meta-l52 = "/buffer 52"
-meta-l53 = "/buffer 53"
-meta-l54 = "/buffer 54"
-meta-l55 = "/buffer 55"
-meta-l56 = "/buffer 56"
-meta-l57 = "/buffer 57"
-meta-l58 = "/buffer 58"
-meta-l59 = "/buffer 59"
-meta-l60 = "/buffer 60"
-meta-l61 = "/buffer 61"
-meta-l62 = "/buffer 62"
-meta-l63 = "/buffer 63"
-meta-l64 = "/buffer 64"
-meta-l65 = "/buffer 65"
-meta-l66 = "/buffer 66"
-meta-l67 = "/buffer 67"
-meta-l68 = "/buffer 68"
-meta-l69 = "/buffer 69"
-meta-l70 = "/buffer 70"
-meta-l71 = "/buffer 71"
-meta-l72 = "/buffer 72"
-meta-l73 = "/buffer 73"
-meta-l74 = "/buffer 74"
-meta-l75 = "/buffer 75"
-meta-l76 = "/buffer 76"
-meta-l77 = "/buffer 77"
-meta-l78 = "/buffer 78"
-meta-l79 = "/buffer 79"
-meta-l80 = "/buffer 80"
-meta-l81 = "/buffer 81"
-meta-l82 = "/buffer 82"
-meta-l83 = "/buffer 83"
-meta-l84 = "/buffer 84"
-meta-l85 = "/buffer 85"
-meta-l86 = "/buffer 86"
-meta-l87 = "/buffer 87"
-meta-l88 = "/buffer 88"
-meta-l89 = "/buffer 89"
-meta-l90 = "/buffer 90"
-meta-l91 = "/buffer 91"
-meta-l92 = "/buffer 92"
-meta-l93 = "/buffer 93"
-meta-l94 = "/buffer 94"
-meta-l95 = "/buffer 95"
-meta-l96 = "/buffer 96"
-meta-l97 = "/buffer 97"
-meta-l98 = "/buffer 98"
-meta-l99 = "/buffer 99"
+meta-j01 = "/buffer *1"
+meta-j02 = "/buffer *2"
+meta-j03 = "/buffer *3"
+meta-j04 = "/buffer *4"
+meta-j05 = "/buffer *5"
+meta-j06 = "/buffer *6"
+meta-j07 = "/buffer *7"
+meta-j08 = "/buffer *8"
+meta-j09 = "/buffer *9"
+meta-j10 = "/buffer *10"
+meta-j11 = "/buffer *11"
+meta-j12 = "/buffer *12"
+meta-j13 = "/buffer *13"
+meta-j14 = "/buffer *14"
+meta-j15 = "/buffer *15"
+meta-j16 = "/buffer *16"
+meta-j17 = "/buffer *17"
+meta-j18 = "/buffer *18"
+meta-j19 = "/buffer *19"
+meta-j20 = "/buffer *20"
+meta-j21 = "/buffer *21"
+meta-j22 = "/buffer *22"
+meta-j23 = "/buffer *23"
+meta-j24 = "/buffer *24"
+meta-j25 = "/buffer *25"
+meta-j26 = "/buffer *26"
+meta-j27 = "/buffer *27"
+meta-j28 = "/buffer *28"
+meta-j29 = "/buffer *29"
+meta-j30 = "/buffer *30"
+meta-j31 = "/buffer *31"
+meta-j32 = "/buffer *32"
+meta-j33 = "/buffer *33"
+meta-j34 = "/buffer *34"
+meta-j35 = "/buffer *35"
+meta-j36 = "/buffer *36"
+meta-j37 = "/buffer *37"
+meta-j38 = "/buffer *38"
+meta-j39 = "/buffer *39"
+meta-j40 = "/buffer *40"
+meta-j41 = "/buffer *41"
+meta-j42 = "/buffer *42"
+meta-j43 = "/buffer *43"
+meta-j44 = "/buffer *44"
+meta-j45 = "/buffer *45"
+meta-j46 = "/buffer *46"
+meta-j47 = "/buffer *47"
+meta-j48 = "/buffer *48"
+meta-j49 = "/buffer *49"
+meta-j50 = "/buffer *50"
+meta-j51 = "/buffer *51"
+meta-j52 = "/buffer *52"
+meta-j53 = "/buffer *53"
+meta-j54 = "/buffer *54"
+meta-j55 = "/buffer *55"
+meta-j56 = "/buffer *56"
+meta-j57 = "/buffer *57"
+meta-j58 = "/buffer *58"
+meta-j59 = "/buffer *59"
+meta-j60 = "/buffer *60"
+meta-j61 = "/buffer *61"
+meta-j62 = "/buffer *62"
+meta-j63 = "/buffer *63"
+meta-j64 = "/buffer *64"
+meta-j65 = "/buffer *65"
+meta-j66 = "/buffer *66"
+meta-j67 = "/buffer *67"
+meta-j68 = "/buffer *68"
+meta-j69 = "/buffer *69"
+meta-j70 = "/buffer *70"
+meta-j71 = "/buffer *71"
+meta-j72 = "/buffer *72"
+meta-j73 = "/buffer *73"
+meta-j74 = "/buffer *74"
+meta-j75 = "/buffer *75"
+meta-j76 = "/buffer *76"
+meta-j77 = "/buffer *77"
+meta-j78 = "/buffer *78"
+meta-j79 = "/buffer *79"
+meta-j80 = "/buffer *80"
+meta-j81 = "/buffer *81"
+meta-j82 = "/buffer *82"
+meta-j83 = "/buffer *83"
+meta-j84 = "/buffer *84"
+meta-j85 = "/buffer *85"
+meta-j86 = "/buffer *86"
+meta-j87 = "/buffer *87"
+meta-j88 = "/buffer *88"
+meta-j89 = "/buffer *89"
+meta-j90 = "/buffer *90"
+meta-j91 = "/buffer *91"
+meta-j92 = "/buffer *92"
+meta-j93 = "/buffer *93"
+meta-j94 = "/buffer *94"
+meta-j95 = "/buffer *95"
+meta-j96 = "/buffer *96"
+meta-j97 = "/buffer *97"
+meta-j98 = "/buffer *98"
+meta-j99 = "/buffer *99"
+meta-k = "/input grab_key_command"
+meta-l = "/window bare"
 meta-m = "/mute mouse toggle"
 meta-n = "/window scroll_next_highlight"
 meta-p = "/window scroll_previous_highlight"
 meta-r = "/input delete_line"
+meta-s = "/mute spell toggle"
 meta-u = "/window scroll_unread"
 meta-wmeta-meta2-A = "/window up"
 meta-wmeta-meta2-B = "/window down"
@@ -626,8 +618,9 @@ ctrl-_ = "/input undo"
 
 [key_search]
 ctrl-I = "/input search_switch_where"
-ctrl-J = "/input search_stop"
-ctrl-M = "/input search_stop"
+ctrl-J = "/input search_stop_here"
+ctrl-M = "/input search_stop_here"
+ctrl-Q = "/input search_stop"
 ctrl-R = "/input search_switch_regex"
 meta2-A = "/input search_previous"
 meta2-B = "/input search_next"
@@ -658,8 +651,6 @@ meta2-D = "/cursor move left"
 @chat:q = "hsignal:chat_quote_prefix_message;/cursor stop"
 
 [key_mouse]
-@bar(buffers):ctrl-wheeldown = "hsignal:buffers_mouse"
-@bar(buffers):ctrl-wheelup = "hsignal:buffers_mouse"
 @bar(buflist):ctrl-wheeldown = "hsignal:buflist_mouse"
 @bar(buflist):ctrl-wheelup = "hsignal:buflist_mouse"
 @bar(input):button2 = "/input grab_mouse_area"
@@ -671,11 +662,6 @@ meta2-D = "/cursor move left"
 @chat(fset.fset):button2* = "hsignal:fset_mouse"
 @chat(fset.fset):wheeldown = "/fset -down 5"
 @chat(fset.fset):wheelup = "/fset -up 5"
-@chat(perl.[*):button1 = "hsignal:coords"
-@chat(perl.iset):button1 = "hsignal:iset_mouse"
-@chat(perl.iset):button2* = "hsignal:iset_mouse"
-@chat(perl.iset):wheeldown = "/repeat 5 /iset **down"
-@chat(perl.iset):wheelup = "/repeat 5 /iset **up"
 @chat(script.scripts):button1 = "/window ${_window_number};/script go ${_chat_line_y}"
 @chat(script.scripts):button2 = "/window ${_window_number};/script go ${_chat_line_y};/script installremove -q ${script_name_with_extension}"
 @chat(script.scripts):wheeldown = "/script down 5"
@@ -685,8 +671,6 @@ meta2-D = "/cursor move left"
 @item(buffer_nicklist):button1-gesture-left-long = "/window ${_window_number};/kickban ${nick}"
 @item(buffer_nicklist):button2 = "/window ${_window_number};/whois ${nick}"
 @item(buffer_nicklist):button2-gesture-left = "/window ${_window_number};/ban ${nick}"
-@item(buffers):button1* = "hsignal:buffers_mouse"
-@item(buffers):button2* = "hsignal:buffers_mouse"
 @item(buflist):button1* = "hsignal:buflist_mouse"
 @item(buflist):button2* = "hsignal:buflist_mouse"
 @item(buflist2):button1* = "hsignal:buflist_mouse"
@@ -696,8 +680,6 @@ meta2-D = "/cursor move left"
 @bar:wheeldown = "/bar scroll ${_bar_name} ${_window_number} +20%"
 @bar:wheelup = "/bar scroll ${_bar_name} ${_window_number} -20%"
 @chat:button1 = "/window ${_window_number}"
-@chat:button1* = "hsignal:coords"
-@chat:button1-event-* = "hsignal:coords"
 @chat:button1-gesture-left = "/window ${_window_number};/buffer -1"
 @chat:button1-gesture-left-long = "/window ${_window_number};/buffer 1"
 @chat:button1-gesture-right = "/window ${_window_number};/buffer +1"
