Minor weechat config changes

--- a/weechat/weechat.conf
+++ b/weechat/weechat.conf
@@ -163,7 +163,7 @@ chat_nick_offline_highlight = default
 chat_nick_offline_highlight_bg = blue
 chat_nick_other = cyan
 chat_nick_prefix = 8
-chat_nick_self = white
+chat_nick_self = magenta
 chat_nick_suffix = green
 chat_prefix_action = white
 chat_prefix_buffer = brown
@@ -174,7 +174,7 @@ chat_prefix_more = lightmagenta
 chat_prefix_network = magenta
 chat_prefix_quit = lightred
 chat_prefix_suffix = 8
-chat_read_marker = 3
+chat_read_marker = 8
 chat_read_marker_bg = default
 chat_server = brown
 chat_tags = red
@@ -268,7 +268,7 @@ buflist.position = left
 buflist.priority = 0
 buflist.separator = on
 buflist.size = 0
-buflist.size_max = 30
+buflist.size_max = 0
 buflist.type = root
 fset.color_bg = default
 fset.color_bg_inactive = default
