More UI improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -29,10 +29,12 @@ bind -r M-j resize-pane -D 2
 bind -r M-l resize-pane -R 2
 
 unbind-key %                                                # Unbind old horizontal
-bind-key % split-window -c "#{pane_current_path}"           # Horizontal current path
+bind-key % split-window -hc "#{pane_current_path}" -l 80    # Vertical current path, 80 width
+bind-key '|' split-window -hc "#{pane_current_path}" -l 80  # Vertical current path, 80 width
 
 unbind-key '"'                                              # Unbind old vertical
-bind-key '"' split-window -hc "#{pane_current_path}" -l 80  # Vertical current path, 80 width
+bind-key '"' split-window -c "#{pane_current_path}"         # Horizontal current path
+bind-key '-' split-window -c "#{pane_current_path}"         # Horizontal current path
 
 unbind-key c                                                # Unbind old create
 bind-key c new-window -c "#{pane_current_path}"             # Create current path
@@ -54,8 +56,6 @@ set -g renumber-windows on                    # Automatically renumber windows
 set -g set-titles on                          # Report terminal title
 set -g set-titles-string "#S - #W"            # Terminal title format
 set -g status-interval 5                      # Update often for status
-set -g window-status-format "#I #W  "         # Window format
-set -g window-status-current-format "#I #W  " # Current window format
 
 # Status bar
 set -g status-left ''
@@ -70,8 +70,19 @@ set -g pane-border-style fg=colour8
 set -g pane-active-border-style fg=colour8
 set -g status-style fg=colour8
 set -g status-style fg=colour8
+
 set -g window-status-current-style fg=colour4
 set -g window-status-bell-style fg=colour1
+set -g window-status-format "#I #W  "         # Window format
+set -g window-status-current-format "#I #W  " # Current window format
+
+setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
+setw -g window-status-current-format ' #I #W #F '
+
+setw -g window-status-style 'fg=colour1 dim'
+setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+
+
 
 set -g window-status-separator ""
 
