Use eza, fix less colors, use lazygit

--- a/tmux.conf
+++ b/tmux.conf
@@ -45,6 +45,12 @@ bind-key k clear-history        # Clear Screen
 # Toggle status bar
 bind-key a set-option status
 
+unbind-key t
+bind-key t display-popup -d '#{pane_current_path}' -E -w 80% -h 80% "$SHELL"
+
+# Big lazygit for comitting
+bind-key g display-popup -d '#{pane_current_path}' -E -w 80% -h 80% "lazygit"
+
 # Set default terminal for colors
 set -g default-terminal "xterm-256color"
 
