Small tweaks and improvements

--- a/tmux.conf
+++ b/tmux.conf
@@ -82,11 +82,11 @@ set -g window-status-bell-style fg=colour1
 set -g window-status-format "#I #W  "         # Window format
 set -g window-status-current-format "#I #W  " # Current window format
 
-setw -g window-status-current-style 'fg=colour0 bg=colour1 bold'
-setw -g window-status-current-format ' #I #W #F '
+setw -g window-status-current-style "bg=terminal bold"
+setw -g window-status-current-format ' #[fg=colour1]#I #W #F '
 
-setw -g window-status-style 'fg=colour1 dim'
-setw -g window-status-format ' #I #[fg=colour7]#W #[fg=colour1]#F '
+setw -g window-status-style 'dim'
+setw -g window-status-format ' #[fg=terminal]#I #W #[fg=colour1]#F '
 
 set -g window-status-separator ""
 
