Fix first file load, few QoL fixes

--- a/tmux.conf
+++ b/tmux.conf
@@ -42,6 +42,10 @@ bind-key c new-window -c "#{pane_current_path}"             # Create current pat
 bind-key r resize-pane -x 84    # Resize pane to 80 chars
 bind-key k clear-history        # Clear Screen
 
+# Easy window movement
+bind-key <  swap-window -t -1
+bind-key >  swap-window -t +1
+
 # Toggle status bar
 bind-key a set-option status
 
