Update tmux statusbar style

--- a/tmux.conf
+++ b/tmux.conf
@@ -67,12 +67,15 @@ set -g set-titles on                          # Report terminal title
 set -g set-titles-string "#S - #W"            # Terminal title format
 set -g status-interval 5                      # Update often for status
 
+# scrollbar
+set -g pane-scrollbars-style "width=0,bg=0,fg=7,pad=1"
+set -g pane-scrollbars "modal"
+
 # Status bar
 set -g status-left ''
-set -g status-right ''
 set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
-set -g status-position bottom
-set -g status-justify left
+set -g status-position top
+set -g status-justify absolute-centre
 set -g message-style bg=colour0
 set -g message-style fg=colour1
 
@@ -81,18 +84,10 @@ set -g pane-active-border-style fg=colour3
 set -g status-style fg=colour8
 set -g status-style fg=colour8
 
-set -g window-status-current-style fg=colour4
-set -g window-status-bell-style fg=colour1
-set -g window-status-format "#I #W  "         # Window format
-set -g window-status-current-format "#I #W  " # Current window format
-
-setw -g window-status-current-style "bg=terminal bold"
-setw -g window-status-current-format ' #[fg=colour1]#I #W #F '
-
-setw -g window-status-style 'dim'
-setw -g window-status-format ' #[fg=terminal]#I #W #[fg=colour1]#F '
-
-set -g window-status-separator ""
+set -g window-status-separator '#[fg=colour8]  •  #[fg=default]'
+set -g window-status-style "fg=colour7"
+set -g window-status-format '#[bg=terminal]#[fg=7]#W#{?window_zoomed_flag, 󰊓,}#[fg=magenta]#{?window_activity_flag, ◉,}'
+set -g window-status-current-format '#[fg=colour14]#W#{?window_zoomed_flag, 󰊓,}#[fg=default]'
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
