Handle bells in tmux

--- a/tmux.conf
+++ b/tmux.conf
@@ -71,6 +71,10 @@ set -g status-interval 5                      # Update often for status
 set -g pane-scrollbars-style "width=0,bg=0,fg=7,pad=1"
 set -g pane-scrollbars "modal"
 
+# Handle bells
+set -g monitor-bell on
+set -g bell-action other # don't let the current window be noisy
+
 # Status bar
 set -g status-left ''
 set -g status-right '#(cd #{pane_current_path}; git rev-parse --abbrev-ref HEAD)'
@@ -84,13 +88,14 @@ set -g pane-active-border-style fg=colour3
 set -g status-style fg=colour8
 set -g status-style fg=colour8
 
+# Window colors
 set -g window-status-separator '#[fg=colour8]  •  #[fg=default]'
 set -g window-status-style "fg=colour7"
-set -g window-status-format '#[bg=terminal]#[fg=7]#W#{?window_zoomed_flag, 󰊓,}#[fg=magenta]#{?window_activity_flag, ◉,}'
+set -g window-status-format '#[bg=terminal]#[fg=7]#W#{?window_zoomed_flag, 󰊓,}#[fg=magenta]#{?window_bell_flag, ◉,}'
 set -g window-status-current-format '#[fg=colour14]#W#{?window_zoomed_flag, 󰊓,}#[fg=default]'
 
 # Settings for true color
 set -ga terminal-overrides ",xterm-256color:Tc"
 
-# allow escape sequence passthrough
+# Allow escape sequence passthrough (e.g. colors)
 set -g allow-passthrough on
